--- a/client/src/styles/button-style.css
+++ b/client/src/styles/button-style.css
@@ -51,6 +51,15 @@
     transform: translate(1px, 1px);
 }
 
+.directions-collapse:hover {
+    box-shadow: 0px 0px 3px rgb(46, 46, 46);
+    background-color: rgb(63, 63, 63);
+}
+
+.directions-collapse:active {
+    transform: translate(1px, 1px);
+}
+
 .submit-button-style {
     cursor: pointer;
     border: none;
@@ -68,20 +77,15 @@
     transform: translate(1px, 1px);
 }
 
-.wrong-page-button {
-    background-color: #000000;
-    cursor: pointer;
-    border: none;
-    border-radius: 15px;
-    box-shadow: 3px 3px 4px rgb(99, 99, 99);
-}
+
 
 .wrong-page-button:hover {
-    background-color: #888888
+    transform: translate(1px, 1px);
 }
 
 .wrong-page-button:active {
     background-color: #636363;
     box-shadow: 0 1px rgb(99, 99, 99);
     transform: translate(2px, 2px);
+    border: none
 }
