Pretter client directory

--- a/client/src/styles/spinner.css
+++ b/client/src/styles/spinner.css
@@ -6,7 +6,7 @@
   margin: 0px;
 }
 .lds-hourglass:after {
-  background: #0E6DFD;
+  background: #0e6dfd;
   content: " ";
   display: block;
   border-radius: 50%;
