--- a/client/src/styles/nav-bar-style.css
+++ b/client/src/styles/nav-bar-style.css
@@ -10,6 +10,7 @@
   font-family: Georgia, "Times New Roman", serif;
   position: absolute;
   left: 55px;
+  top: 6px;
   z-index: 4;
   display: inline-block;
 }
